@@ -53,6 +53,8 @@
  *               bug 1932146 (DG);
  * 16-Jan-2009 : Fixed bug 2490803, a problem in the setRange() method (DG);
  * 02-Mar-2009 : Added locale - see patch 2569670 by Benjamin Bignell (DG);
+ * 02-Mar-2009 : Fixed draw() method to check tickMarksVisible and
+ *               tickLabelsVisible (DG);
  *
  */
 
@@ -663,20 +665,21 @@ public class PeriodAxis extends ValueAxis
      *
      * @return The axis state (never <code>null</code>).
      */
-    public AxisState draw(Graphics2D g2,
-                          double cursor,
-                          Rectangle2D plotArea,
-                          Rectangle2D dataArea,
-                          RectangleEdge edge,
-                          PlotRenderingInfo plotState) {
+    public AxisState draw(Graphics2D g2, double cursor, Rectangle2D plotArea,
+            Rectangle2D dataArea, RectangleEdge edge,
+            PlotRenderingInfo plotState) {
 
         AxisState axisState = new AxisState(cursor);
         if (isAxisLineVisible()) {
             drawAxisLine(g2, cursor, dataArea, edge);
         }
-        drawTickMarks(g2, axisState, dataArea, edge);
-        for (int band = 0; band < this.labelInfo.length; band++) {
-            axisState = drawTickLabels(band, g2, axisState, dataArea, edge);
+        if (isTickMarksVisible()) {
+            drawTickMarks(g2, axisState, dataArea, edge);
+        }
+        if (isTickLabelsVisible()) {
+            for (int band = 0; band < this.labelInfo.length; band++) {
+                axisState = drawTickLabels(band, g2, axisState, dataArea, edge);
+            }
         }
 
         // draw the axis label (note that 'state' is passed in *and*
@@ -725,11 +728,11 @@ public class PeriodAxis extends ValueAxis
         double outsideLength = getTickMarkOutsideLength();
         RegularTimePeriod t = createInstance(this.majorTickTimePeriodClass, 
                 this.first.getStart(), getTimeZone(), this.locale);
-        long t0 = t.getFirstMillisecond(this.calendar);
+        long t0 = t.getFirstMillisecond();
         Line2D inside = null;
         Line2D outside = null;
-        long firstOnAxis = getFirst().getFirstMillisecond(this.calendar);
-        long lastOnAxis = getLast().getLastMillisecond(this.calendar) + 1;
+        long firstOnAxis = getFirst().getFirstMillisecond();
+        long lastOnAxis = getLast().getLastMillisecond() + 1;
         while (t0 <= lastOnAxis) {
             ticks.add(new NumberTick(new Double(t0), "", TextAnchor.CENTER,
                     TextAnchor.CENTER, 0.0));
@@ -753,8 +756,8 @@ public class PeriodAxis extends ValueAxis
                 RegularTimePeriod tminor = createInstance(
                         this.minorTickTimePeriodClass, new Date(t0),
                         getTimeZone(), this.locale);
-                long tt0 = tminor.getFirstMillisecond(this.calendar);
-                while (tt0 < t.getLastMillisecond(this.calendar)
+                long tt0 = tminor.getFirstMillisecond();
+                while (tt0 < t.getLastMillisecond()
                         && tt0 < lastOnAxis) {
                     double xx0 = valueToJava2D(tt0, dataArea, edge);
                     if (edge == RectangleEdge.TOP) {
@@ -776,11 +779,13 @@ public class PeriodAxis extends ValueAxis
                         g2.draw(outside);
                     }
                     tminor = tminor.next();
-                    tt0 = tminor.getFirstMillisecond(this.calendar);
+                    tminor.peg(this.calendar);
+                    tt0 = tminor.getFirstMillisecond();
                 }
             }
             t = t.next();
-            t0 = t.getFirstMillisecond(this.calendar);
+            t.peg(this.calendar);
+            t0 = t.getFirstMillisecond();
         }
         if (edge == RectangleEdge.TOP) {
             state.cursorUp(Math.max(outsideLength,
@@ -834,20 +839,20 @@ public class PeriodAxis extends ValueAxis
                     fm.getHeight());
         }
         state.moveCursor(delta1, edge);
-        long axisMin = this.first.getFirstMillisecond(this.calendar);
-        long axisMax = this.last.getLastMillisecond(this.calendar);
+        long axisMin = this.first.getFirstMillisecond();
+        long axisMax = this.last.getLastMillisecond();
         g2.setFont(this.labelInfo[band].getLabelFont());
         g2.setPaint(this.labelInfo[band].getLabelPaint());
 
         // work out the number of periods to skip for labelling
         RegularTimePeriod p1 = this.labelInfo[band].createInstance(
-                new Date(axisMin), this.timeZone);
+                new Date(axisMin), this.timeZone, this.locale);
         RegularTimePeriod p2 = this.labelInfo[band].createInstance(
-                new Date(axisMax), this.timeZone);
+                new Date(axisMax), this.timeZone, this.locale);
         String label1 = this.labelInfo[band].getDateFormat().format(
-                new Date(p1.getMiddleMillisecond(this.calendar)));
+                new Date(p1.getMiddleMillisecond()));
         String label2 = this.labelInfo[band].getDateFormat().format(
-                new Date(p2.getMiddleMillisecond(this.calendar)));
+                new Date(p2.getMiddleMillisecond()));
         Rectangle2D b1 = TextUtilities.getTextBounds(label1, g2,
                 g2.getFontMetrics());
         Rectangle2D b2 = TextUtilities.getTextBounds(label2, g2,
@@ -861,12 +866,12 @@ public class PeriodAxis extends ValueAxis
         else {
             ww = ww - axisMin;
         }
-        long length = p1.getLastMillisecond(this.calendar)
-                      - p1.getFirstMillisecond(this.calendar);
+        long length = p1.getLastMillisecond()
+                      - p1.getFirstMillisecond();
         int periods = (int) (ww / length) + 1;
 
         RegularTimePeriod p = this.labelInfo[band].createInstance(
-                new Date(axisMin), this.timeZone);
+                new Date(axisMin), this.timeZone, this.locale);
         Rectangle2D b = null;
         long lastXX = 0L;
         float y = (float) (state.getCursor());
@@ -876,14 +881,13 @@ public class PeriodAxis extends ValueAxis
             anchor = TextAnchor.BOTTOM_CENTER;
             yDelta = -yDelta;
         }
-        while (p.getFirstMillisecond(this.calendar) <= axisMax) {
-            float x = (float) valueToJava2D(p.getMiddleMillisecond(
-                    this.calendar), dataArea, edge);
+        while (p.getFirstMillisecond() <= axisMax) {
+            float x = (float) valueToJava2D(p.getMiddleMillisecond(), dataArea,
+                    edge);
             DateFormat df = this.labelInfo[band].getDateFormat();
-            String label = df.format(new Date(p.getMiddleMillisecond(
-                    this.calendar)));
-            long first = p.getFirstMillisecond(this.calendar);
-            long last = p.getLastMillisecond(this.calendar);
+            String label = df.format(new Date(p.getMiddleMillisecond()));
+            long first = p.getFirstMillisecond();
+            long last = p.getLastMillisecond();
             if (last > axisMax) {
                 // this is the last period, but it is only partially visible
                 // so check that the label will fit before displaying it...
@@ -923,7 +927,7 @@ public class PeriodAxis extends ValueAxis
             }
             if (lastXX > 0L) {
                 if (this.labelInfo[band].getDrawDividers()) {
-                    long nextXX = p.getFirstMillisecond(this.calendar);
+                    long nextXX = p.getFirstMillisecond();
                     long mid = (lastXX + nextXX) / 2;
                     float mid2d = (float) valueToJava2D(mid, dataArea, edge);
                     g2.setStroke(this.labelInfo[band].getDividerStroke());
@@ -935,6 +939,7 @@ public class PeriodAxis extends ValueAxis
             for (int i = 0; i < periods; i++) {
                 p = p.next();
             }
+            p.peg(this.calendar);
         }
         double used = 0.0;
         if (b != null) {
@@ -964,10 +969,8 @@ public class PeriodAxis extends ValueAxis
      *
      * @return The list of ticks.
      */
-    public List refreshTicks(Graphics2D g2,
-                             AxisState state,
-                             Rectangle2D dataArea,
-                             RectangleEdge edge) {
+    public List refreshTicks(Graphics2D g2, AxisState state,
+            Rectangle2D dataArea, RectangleEdge edge) {
         return Collections.EMPTY_LIST;
     }
 
@@ -983,13 +986,12 @@ public class PeriodAxis extends ValueAxis
      *
      * @return The Java2D coordinate.
      */
-    public double valueToJava2D(double value,
-                                Rectangle2D area,
-                                RectangleEdge edge) {
+    public double valueToJava2D(double value, Rectangle2D area,
+            RectangleEdge edge) {
 
         double result = Double.NaN;
-        double axisMin = this.first.getFirstMillisecond(this.calendar);
-        double axisMax = this.last.getLastMillisecond(this.calendar);
+        double axisMin = this.first.getFirstMillisecond();
+        double axisMax = this.last.getLastMillisecond();
         if (RectangleEdge.isTopOrBottom(edge)) {
             double minX = area.getX();
             double maxX = area.getMaxX();
@@ -1028,15 +1030,14 @@ public class PeriodAxis extends ValueAxis
      *
      * @return The data value.
      */
-    public double java2DToValue(double java2DValue,
-                                Rectangle2D area,
-                                RectangleEdge edge) {
+    public double java2DToValue(double java2DValue, Rectangle2D area,
+            RectangleEdge edge) {
 
         double result = Double.NaN;
         double min = 0.0;
         double max = 0.0;
-        double axisMin = this.first.getFirstMillisecond(this.calendar);
-        double axisMax = this.last.getLastMillisecond(this.calendar);
+        double axisMin = this.first.getFirstMillisecond();
+        double axisMax = this.last.getLastMillisecond();
         if (RectangleEdge.isTopOrBottom(edge)) {
             min = area.getX();
             max = area.getMaxX();
